--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@rollup/plugin-beep": "^0.2.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
@@ -48,6 +51,7 @@
     "rollup-plugin-rename-node-modules": "^1.3.1",
     "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-typescript2": "^0.34.0",
+    "semantic-release": "^19.0.3",
     "ttypescript": "^1.5.13",
     "typescript": "^4.4.4"
   },
