--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version: 16.x
           registry-url: 'https://npm.pkg.github.com'
-          scope: '@corellium'
+          scope: '@bamerf'
 
       # Cache dependencies and build outputs to improve workflow execution time
       - name: Cache node modules
