--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
+    "dev": "yarn storybook",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "types:check": "tsc --project tsconfig.json --noEmit",
